--- a/output/public/getting-started.html
+++ b/output/public/getting-started.html
@@ -23,19 +23,19 @@
 <meta content='Getting Started with Cloud Foundry' property='og:description'>
 <meta content='en_US' property='og:locale'>
 <title>Cloud Foundry | Get Started</title>
-<link href='/docs/docs/stylesheets/print.css' media='print' rel='stylesheet' type='text/css'>
-<link href='/docs/docs/stylesheets/master.css' media='screen' rel='stylesheet' type='text/css'>
+<link href='/docs/stylesheets/print.css' media='print' rel='stylesheet' type='text/css'>
+<link href='/docs/stylesheets/master.css' media='screen' rel='stylesheet' type='text/css'>
 <link href='favicon.ico' rel='shortcut icon'>
-<link href='/docs/docs/stylesheets/uv_active4d.css' rel='stylesheet' type='text/css'>
-<link href='/docs/docs/stylesheets/documentation.css' media='screen' rel='stylesheet' type='text/css'>
-<link href='/docs/docs/stylesheets/pygments.css' media='screen' rel='stylesheet' type='text/css'>
-<script src='/docs/docs/js/jquery-1.6.4.min.js' type='text/javascript'></script>
-<script src='/docs/docs/js/documentation.js' type='text/javascript'></script>
-<script src='/docs/docs/js/jquery.easing.js' type='text/javascript'></script>
-<script src='/docs/docs/js/jquery.social.share.1.2.min.js' type='text/javascript'></script>
+<link href='/docs/stylesheets/uv_active4d.css' rel='stylesheet' type='text/css'>
+<link href='/docs/stylesheets/documentation.css' media='screen' rel='stylesheet' type='text/css'>
+<link href='/docs/stylesheets/pygments.css' media='screen' rel='stylesheet' type='text/css'>
+<script src='/docs/js/jquery-1.6.4.min.js' type='text/javascript'></script>
+<script src='/docs/js/documentation.js' type='text/javascript'></script>
+<script src='/docs/js/jquery.easing.js' type='text/javascript'></script>
+<script src='/docs/js/jquery.social.share.1.2.min.js' type='text/javascript'></script>
 <!--[if lt IE 9 ]> <link href="/stylesheets/ie.css" media="screen" rel="stylesheet" type="text/css" /> <![endif]-->
 <!--[if lt IE 8 ]> <link href="/stylesheets/ie7.css" media="screen" rel="stylesheet" type="text/css" /> <![endif]-->
-<link href='/docs/docs/stylesheets/master-cf.css' media='screen' rel='stylesheet' type='text/css'>
+<link href='/docs/stylesheets/master-cf.css' media='screen' rel='stylesheet' type='text/css'>
 </head>
 <body class='api'>
 <div class='wrapper'>
